atualização de doc. API
