# src/swagger.json
@@ -138,7 +138,7 @@
                 }
             }
         },
-        "/user/{id}/": {
+        "/user/updt/{id}": {
             "patch": {
                 "summary": "Update user by id",
                 "description": "Route responsible for editing the user by id",
@@ -155,7 +155,7 @@
                         "in": "path",
                         "name": "id",
                         "type": "string",
-                        "description": "User ID",
+                        "description": "Usuário ID",
                         "required": true
                     }
                 ],
@@ -168,7 +168,7 @@
                             "examples": {
                                 "User": {
                                     "value": {
-                                        "nome": "testando"
+                                        "nome": "testar de novo"
                                     }
                                 }
                             }
@@ -252,9 +252,9 @@
                                 "Post": {
                                     "value": {
                                         "user": "",
-                                        "title": "ECMAScript 6",
-                                        "text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
-                                        "banner": "https://labs.tadigital.com/wp-content/uploads/2017/07/ES6-banner.jpg",
+                                        "title": "qualquer título",
+                                        "text": "qualquer texto para preencher",
+                                        "banner": "qualquer imagem.jpg",
                                         "likes": [],
                                         "comments": []
                                     }
@@ -348,7 +348,7 @@
                 }
             }
         },
-        "/news/search": {
+        "/news/searchtitle": {
             "get": {
                 "summary": "Search posts by title",
                 "description": "Route responsible for fetching the posts that match the title sent via query params",
@@ -383,12 +383,17 @@
                 }
             }
         },
-        "/news/byUserId": {
+        "/news/byuser": {
             "get": {
-                "summary": "Search posts by user id",
-                "description": "Route responsible for fetching posts by user id",
+                "summary": "Search posts by user",
+                "description": "Route responsible for fetching posts by user",
                 "tags": [
                     "Post"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
                 ],
                 "responses": {
                     "400": {
@@ -413,7 +418,7 @@
                 }
             }
         },
-        "/news/{id}/": {
+        "/news/{id}": {
             "get": {
                 "summary": "Search post by id",
                 "description": "Route responsible for fetching post by id",
@@ -455,7 +460,7 @@
                 }
             }
         },
-        "/news/update/{id}": {
+        "/news/updt/{id}": {
             "patch": {
                 "summary": "Update a post",
                 "description": "Route responsible for updating a Post",
@@ -485,7 +490,7 @@
                             "examples": {
                                 "Post": {
                                     "value": {
-                                        "title": "",
+                                        "title": "novo título post bruno",
                                         "text": "",
                                         "banner": ""
                                     }
@@ -515,7 +520,7 @@
                 }
             }
         },
-        "/news/delete/{id}/": {
+        "/news/del/{id}/": {
             "delete": {
                 "summary": "Delete a post",
                 "description": "Route responsible for deleting a Post",
@@ -588,7 +593,7 @@
                 "summary": "Comment on a post",
                 "description": "Route responsible for commenting on a post",
                 "tags": [
-                    "News"
+                    "Post"
                 ],
                 "security": [
                     {
@@ -613,13 +618,47 @@
                             "examples": {
                                 "Comment": {
                                     "value": {
-                                        "message": "Comentário legal"
+                                        "comment": "Comentário legal"
                                     }
                                 }
                             }
                         }
                     }
                 },
+                "responses": {
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Not Found"
+                    },
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "news/{idnews}/{idcomment}": {
+            "delete": {
+                "summary": "Comment on a post",
+                "description": "Route responsible for commenting on a post",
+                "tags": [
+                    "Post"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "type": "string",
+                        "description": "News ID",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "401": {
                         "description": "Unauthorized"
